--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	<body>
 		<header>
 
-
+			<div class="container">
+				<img id="logotipo" src="img/orlando-logo.png" alt="Orlado City">
+			</div>
 			<div class="header-black">
 				<div class="container">
 					<ul class="pull-right">
@@ -36,12 +38,19 @@
 
 			<div class="container">
 				<div class="row">
-
+					<nav id="menu" class="pull-right">
+						<ul>
+							<li> <a href="#">Tickets</a></li>
+							<li><a href="#">News</a></li>
+							<li><a href="#">Schedule</a></li>
+							<li>
+								<input type="search" placeholder="Search...">
+							</li>
+						</ul>
+					</nav>
 				</div>
 			</div>
-			<div class="container">
-				<img id="logotipo" src="img/orlando-logo.png" alt="Orlado City">
-			</div>
+			
 		</header>
 		
 
