--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title>Orlando City</title>
 		<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous"> -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/orlando.css">
 
 	</head>
@@ -32,20 +34,27 @@
 						<li class="clube-14"><a href="#"></a></li>
 						<li class="clube-15"><a href="#"></a></li>
 						<li class="clube-16"><a href="#"></a></li>
+						<li class="clube-17"><a href="#"></a></li>
 					</ul>
 				</div>
 			</div>
 
 			<div class="container">
-				<div class="row">
+				<div class="">
 					<nav id="menu" class="pull-right">
 						<ul>
-							<li> <a href="#">Tickets</a></li>
+							<li><a href="#">Tickets</a></li>
 							<li><a href="#">News</a></li>
 							<li><a href="#">Schedule</a></li>
-							<li>
-								<input type="search" placeholder="Search...">
-							</li>
+							<li class="search">
+								<div class="input-group">
+									<input type="search"  placeholder="Search">
+									<span class="input-group-btn">
+										<button class="" type="button"><i class="fas fa-search"></i></button>
+									</span>
+								</div><!-- /input-group-->
+
+							</li> 
 						</ul>
 					</nav>
 				</div>
@@ -53,7 +62,7 @@
 			
 		</header>
 		
-
+		<script src="https://kit.fontawesome.com/9ffce81729.js" crossorigin="anonymous"></script>
 		<script src="lib/jquery/jquery.min.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
