--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
 			
 		</header>
 		
+		<section>
+			<div id="banner">
+				<h1>
+					Orlando City
+					<small>
+						Orlando City Soccer Club
+					</small>
+				</h1>
+				
+			</div>
+		</section>
 		<script src="https://kit.fontawesome.com/9ffce81729.js" crossorigin="anonymous"></script>
 		<script src="lib/jquery/jquery.min.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
