--- a/index.html
+++ b/index.html
@@ -70,7 +70,35 @@
 						Orlando City Soccer Club
 					</small>
 				</h1>
-				
+			</div>
+			<div id="new" class="container">
+				<div class="row text-center">
+					<h2>Latest News</h2>
+					<hr>
+				</div>
+
+				<div class="row thumbnails">
+					<div class="col-md-3">
+						<img src="img/noticia-thumb.jpg" alt="Noticia">
+						<h3>Orlando City Acquires Goalkeeper Joe Bendik from Toronto FC</h3>
+						<time>December 21, 2015</time>
+					</div>
+					<div class="col-md-3">
+						<img src="img/noticia-thumb.jpg" alt="Noticia">
+						<h3>Orlando City Acquires Goalkeeper Joe Bendik from Toronto FC</h3>
+						<time>December 21, 2015</time>
+					</div>
+					<div class="col-md-3">
+						<img src="img/noticia-thumb.jpg" alt="Noticia">
+						<h3>Orlando City Acquires Goalkeeper Joe Bendik from Toronto FC</h3>
+						<time>December 21, 2015</time>
+					</div>
+					<div class="col-md-3">
+						<img src="img/noticia-thumb.jpg" alt="Noticia">
+						<h3>Orlando City Acquires Goalkeeper Joe Bendik from Toronto FC</h3>
+						<time>December 21, 2015</time>
+					</div>
+				</div>
 			</div>
 		</section>
 		<script src="https://kit.fontawesome.com/9ffce81729.js" crossorigin="anonymous"></script>
